# skappi

./: .gitignore  .pylintrc  .travis.yml  LICENSE  README.rst  requirements_dev.txt  setup.cfg
.github/: ISSUE_TEMPLATE.md
src/skappi/: __init__.py  __main__.py  ihm.qml  skappi.py
tests/: all_test.py  test_skappi.py
