

[metadata]
name = skappi
version = attr: skappi.__version__
author = "Alban Brillat"
author_email = "binmail@free.fr"
description = "A simple KPI builder."
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/albanb/skappi
project_urls = 
    Bug Tracker = https://github.com/albanb/skappi/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
zip_safe = False
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    skappi = skappi.skappi:main
